<resources>
    <string name="app_name">AshCraft</string>
    <string name="title_home">首页</string>
    <string name="title_chat">消息</string>
    <string name="title_cart">购物车</string>
    <string name="title_profile">我的</string>

    <string name="title_home_main_title">饿了么</string>
    <string name="title_home_sub_title">潮流 x 好物</string>
    <string name="title_home_search">搜索</string>
    <string name="title_home_search_hint">请输入搜索内容</string>

    <string name="title_profile_name">未登录</string>
    <string name="title_profile_signature">登录即可解锁特权</string>

    <string name="title_profile_star">收藏</string>
    <string name="title_profile_subscribe">订阅</string>
    <string name="title_profile_history">足迹</string>
    <string name="title_profile_wallet">零钱余额(元)</string>
    <string name="title_profile_more">更多服务</string>
    <string name="title_profile_order">订单</string>
    <string name="title_profile_service">联系客服</string>
    <string name="title_profile_settings">设置</string>

    <string name="image_profile_background">背景图片</string>

</resources>