<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/moneyCard"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="?attr/colorSecondary"
        android:clickable="true"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:text="@string/title_profile_wallet"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="0.00"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:text="零钱不够？点我充值！"
            android:textSize="12sp" />

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/star"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/subscribe"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moneyCard"
        app:srcCompat="@drawable/icon_collection"
        app:tint="?attr/colorPrimary" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_profile_star"
        app:layout_constraintEnd_toEndOf="@+id/star"
        app:layout_constraintStart_toStartOf="@+id/star"
        app:layout_constraintTop_toBottomOf="@+id/star" />

    <ImageView
        android:id="@+id/subscribe"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/star"
        app:layout_constraintEnd_toStartOf="@+id/history"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/star"
        app:layout_constraintTop_toTopOf="@+id/star"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/bitmap_subscription"
        app:tint="?attr/colorPrimary" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_profile_subscribe"
        app:layout_constraintEnd_toEndOf="@+id/subscribe"
        app:layout_constraintStart_toStartOf="@+id/subscribe"
        app:layout_constraintTop_toBottomOf="@+id/subscribe" />

    <ImageView
        android:id="@+id/history"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/subscribe"
        app:layout_constraintEnd_toStartOf="@+id/order"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/subscribe"
        app:layout_constraintTop_toTopOf="@+id/subscribe"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/bitmap_history"
        app:tint="?attr/colorPrimary" />

    <ImageView
        android:id="@+id/order"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/history"
        app:layout_constraintTop_toTopOf="@+id/history"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/bitmap_order"
        app:tint="?attr/colorPrimary" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_profile_history"
        app:layout_constraintEnd_toEndOf="@+id/history"
        app:layout_constraintStart_toStartOf="@+id/history"
        app:layout_constraintTop_toBottomOf="@+id/history" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_profile_order"
        app:layout_constraintEnd_toEndOf="@+id/order"
        app:layout_constraintStart_toStartOf="@+id/order"
        app:layout_constraintTop_toBottomOf="@+id/order" />

    <ImageView
        android:id="@+id/service"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:srcCompat="@drawable/bitmap_service"
        app:tint="?attr/colorPrimary" />

    <TextView
        android:id="@+id/serviceTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/title_profile_service"
        app:layout_constraintBottom_toBottomOf="@+id/service"
        app:layout_constraintStart_toEndOf="@+id/service"
        app:layout_constraintTop_toTopOf="@+id/service" />

    <ImageView
        android:id="@+id/setting"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/service"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/service"
        app:layout_constraintTop_toBottomOf="@+id/service"
        app:srcCompat="@drawable/bitmap_setting"
        app:tint="?attr/colorPrimary" />

    <TextView
        android:id="@+id/settingTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_profile_settings"
        app:layout_constraintBottom_toBottomOf="@+id/setting"
        app:layout_constraintStart_toStartOf="@+id/serviceTip"
        app:layout_constraintTop_toTopOf="@+id/setting" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/service"
        app:srcCompat="@drawable/bitmap_arrow_right"
        app:tint="?attr/colorPrimary" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/setting"
        app:layout_constraintEnd_toEndOf="@+id/imageView11"
        app:layout_constraintStart_toStartOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="@+id/setting"
        app:srcCompat="@drawable/bitmap_arrow_right"
        app:tint="?attr/colorPrimary" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/title_profile_more"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/star" />

    <Button
        android:id="@+id/logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn_standard"
        android:textColor="@color/white"
        android:text="退出登录"
        app:layout_constraintEnd_toEndOf="@+id/moneyCard"
        app:layout_constraintStart_toStartOf="@+id/moneyCard"
        app:layout_constraintTop_toBottomOf="@+id/setting" />

</androidx.constraintlayout.widget.ConstraintLayout>